--- a/NLP_G4_LR.ipynb
+++ b/NLP_G4_LR.ipynb
@@ -195,7 +195,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "id": "a32d3605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1946)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check for duplicate \n",
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c83b62a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>title</th>\n",
+       "      <th>char_count</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>has_tab</th>\n",
+       "      <th>has_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>0</td>\n",
+       "      <td>thanks to trump</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>986</th>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1487</th>\n",
+       "      <td>0</td>\n",
+       "      <td>mcconnell says he‚ll obstruct any effort to hi...</td>\n",
+       "      <td>79</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1534</th>\n",
+       "      <td>0</td>\n",
+       "      <td>mcconnell says he‚ll obstruct any effort to hi...</td>\n",
+       "      <td>79</td>\n",
+       "      <td>11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1619</th>\n",
+       "      <td>0</td>\n",
+       "      <td>trump freaks out</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34049</th>\n",
+       "      <td>1</td>\n",
+       "      <td>u.s. house passes sanctions on iran-backed hez...</td>\n",
+       "      <td>52</td>\n",
+       "      <td>7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34053</th>\n",
+       "      <td>1</td>\n",
+       "      <td>thailand kicks off sumptuous funeral of king b...</td>\n",
+       "      <td>63</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34054</th>\n",
+       "      <td>1</td>\n",
+       "      <td>trump declines to say if he will visit korean ...</td>\n",
+       "      <td>62</td>\n",
+       "      <td>13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34126</th>\n",
+       "      <td>1</td>\n",
+       "      <td>thailand kicks off sumptuous funeral of king b...</td>\n",
+       "      <td>63</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34132</th>\n",
+       "      <td>1</td>\n",
+       "      <td>under trump plan\\trefugees from 11 countries f...</td>\n",
+       "      <td>73</td>\n",
+       "      <td>11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3812 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       label                                              title  char_count  \\\n",
+       "678        0                                    thanks to trump          15   \n",
+       "986        0                                                 no           2   \n",
+       "1487       0  mcconnell says he‚ll obstruct any effort to hi...          79   \n",
+       "1534       0  mcconnell says he‚ll obstruct any effort to hi...          79   \n",
+       "1619       0                                   trump freaks out          16   \n",
+       "...      ...                                                ...         ...   \n",
+       "34049      1  u.s. house passes sanctions on iran-backed hez...          52   \n",
+       "34053      1  thailand kicks off sumptuous funeral of king b...          63   \n",
+       "34054      1  trump declines to say if he will visit korean ...          62   \n",
+       "34126      1  thailand kicks off sumptuous funeral of king b...          63   \n",
+       "34132      1  under trump plan\\trefugees from 11 countries f...          73   \n",
+       "\n",
+       "       word_count  has_tab  has_url  \n",
+       "678             3    False    False  \n",
+       "986             1    False    False  \n",
+       "1487           11    False    False  \n",
+       "1534           11    False    False  \n",
+       "1619            3    False    False  \n",
+       "...           ...      ...      ...  \n",
+       "34049           7    False    False  \n",
+       "34053           9    False    False  \n",
+       "34054          13    False    False  \n",
+       "34126           9    False    False  \n",
+       "34132          11     True    False  \n",
+       "\n",
+       "[3812 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#identify duplicates\n",
+    "df[df.duplicated(keep=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e7331120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Remove duplicates\n",
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "81a7473e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check for duplicate \n",
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "92af2b0f",
    "metadata": {},
    "outputs": [
@@ -263,7 +498,7 @@
        "4      0  pope francis just called out donald trump duri..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "56672ffb",
    "metadata": {},
    "outputs": [
@@ -306,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "49b0d327",
    "metadata": {},
    "outputs": [
@@ -314,7 +549,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== CLASS DISTRIBUTION ===\n",
+      "=== CLASS DISTRIBUTION ===\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "label\n",
       "0    17572\n",
       "1    16580\n",
@@ -338,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "dcb10e50",
    "metadata": {},
    "outputs": [
@@ -366,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "b7a15605",
    "metadata": {},
    "outputs": [
@@ -393,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "aea253b5",
    "metadata": {},
    "outputs": [
@@ -423,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "10d7582d",
    "metadata": {},
    "outputs": [
@@ -453,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "d7911829",
    "metadata": {},
    "outputs": [
@@ -483,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "ac8dd82a",
    "metadata": {},
    "outputs": [
@@ -512,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "18590bc7",
    "metadata": {},
    "outputs": [
@@ -542,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "3cd2c2dd",
    "metadata": {},
    "outputs": [
@@ -600,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "b2c991d2",
    "metadata": {},
    "outputs": [
@@ -608,7 +849,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'just', \"i'll\", 'some', 'what', 'such', 'down', 'too', \"he's\", 'while', 'weren', 'because', 'doing', 'it', 'ma', \"weren't\", 'mightn', 'them', 'can', 'mustn', \"he'd\", 'do', \"doesn't\", 'that', 'wasn', 'here', 'wouldn', 'any', \"isn't\", 'own', 'as', 'been', 'until', \"hadn't\", 'in', 'off', 'by', \"didn't\", 'from', 'i', 'under', 'd', 'so', \"she's\", 'having', 'needn', 'only', 'their', 't', 'they', 'the', 'we', 'yourself', 'other', \"it's\", \"wouldn't\", \"needn't\", 'hers', 'its', 'didn', \"it'd\", 'himself', 'on', 'an', \"hasn't\", 'between', 'now', 'yourselves', \"wasn't\", 'again', 'each', 'your', \"i'd\", 'him', 'to', 'before', 'up', 'themselves', \"you'll\", 'you', 'where', 'is', \"he'll\", 'my', 'being', 's', 'more', 'not', \"haven't\", 'she', \"you're\", 'both', 'doesn', 'aren', \"shouldn't\", 'few', \"they'd\", 'm', \"we'll\", 'haven', \"don't\", 'his', 'after', \"she'll\", \"we're\", 'all', 'or', 'ourselves', 'which', 'further', 'there', 'when', 'are', 'theirs', 'how', 'herself', 'ain', 'and', 'for', \"we'd\", \"they've\", 'once', 'am', 'her', 'o', \"they're\", 'about', 'into', 'out', \"you'd\", 'those', 'above', 'during', \"she'd\", 'if', 've', 'of', 'has', 'me', 'itself', 'does', \"should've\", 'most', 'shan', 'isn', 'than', \"that'll\", 'myself', 'couldn', 'below', 'a', 'against', 'were', 'should', 'y', 'don', 'he', 'yours', \"won't\", 'be', \"mightn't\", 'over', 'will', 'won', \"i'm\", 'ours', 'no', \"i've\", 'very', 'll', 'hasn', 'at', 'this', 'our', \"mustn't\", 'nor', 'with', 'whom', 'these', \"aren't\", 'shouldn', 'through', 'who', 'was', 'hadn', \"couldn't\", 'did', 'why', 'then', 'have', \"we've\", \"it'll\", \"shan't\", 'had', 'but', \"they'll\", 're', 'same', \"you've\"}\n"
+      "{'before', 'its', 'aren', 'i', \"i've\", \"we'll\", 'and', \"isn't\", 'doesn', 'do', 'what', \"doesn't\", 'just', 'wouldn', 'will', 'such', 'that', 'why', 'weren', 'once', 'did', 't', 'because', 'll', 'been', \"it's\", 'how', 'herself', 'being', 'down', 'ourselves', \"we'd\", \"they'll\", 'isn', 'ours', 'some', \"should've\", \"haven't\", 'mustn', 'then', \"they've\", \"you'd\", \"she's\", 'into', 'or', \"you've\", 'theirs', \"couldn't\", 'does', \"they'd\", \"won't\", 'my', 'him', \"shan't\", 'by', 'same', 'when', 'hasn', 'below', 'after', 'it', 'out', 'me', 'there', 'myself', 'our', 's', 'has', 'can', 'off', 'shouldn', 'until', \"don't\", 've', 'while', 'from', 'is', 'whom', 'couldn', 'be', 'mightn', 'to', 'as', 'your', \"hasn't\", 'haven', 'but', 'than', 'those', 'which', 'over', 'were', \"wouldn't\", 'again', 'who', 'few', 'during', 'so', \"i'm\", 'these', 'if', 'd', \"he'd\", \"didn't\", 'any', 'her', 'their', 'only', 'an', 'nor', 'don', 'o', \"needn't\", 'in', 'too', 'up', 'she', \"we're\", 'very', 'not', 'them', \"it'd\", 'didn', 'yourself', 'a', 'about', 'above', 'further', 'y', 'most', 'each', 'had', 'his', 'yourselves', 'they', \"shouldn't\", \"mightn't\", \"it'll\", 'having', 'won', 'all', 'was', 'should', 'here', 'am', 'hers', 'you', 'the', \"you'll\", 'have', 'other', 'now', 'shan', 'for', 'we', 'on', 'more', 'doing', 'both', \"i'd\", \"aren't\", 'of', 'hadn', 'themselves', 'this', \"wasn't\", \"he'll\", 'under', 'own', \"she'll\", 'wasn', 'he', \"weren't\", 'where', \"you're\", \"mustn't\", 'against', \"he's\", 'ain', 'm', 're', 'itself', \"she'd\", 'no', 'yours', 'through', 'are', \"that'll\", \"hadn't\", 'at', \"i'll\", \"we've\", 'between', 'needn', \"they're\", 'himself', 'ma', 'with'}\n"
      ]
     }
    ],
@@ -620,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "5f4d9636",
    "metadata": {},
    "outputs": [],
@@ -662,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "28a04ce1",
    "metadata": {},
    "outputs": [
@@ -696,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "id": "776dd0f0",
    "metadata": {},
    "outputs": [
@@ -727,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "id": "be698f76",
    "metadata": {},
    "outputs": [],
@@ -746,7 +987,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "id": "d10bd188",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "599"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(X_train).intersection(set(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "7ce86ecb",
    "metadata": {},
    "outputs": [],
@@ -766,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "id": "574639ea",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1948,7 @@
        "LogisticRegression(class_weight='balanced', max_iter=1000, n_jobs=-1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "e3265b03",
    "metadata": {},
    "outputs": [
@@ -1739,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "id": "e3848092",
    "metadata": {},
    "outputs": [
@@ -1750,7 +2012,7 @@
        "       [ 172, 3130]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
